2007-01-20 Raphael Neider <rneider AT web.de>

	* device/lib/pic/libdev/devices.txt: device list for mkall.sh
	* device/lib/pic/libdev/mkall.sh: script to rebuild all device libs
	* device/lib/pic/libdev/pic14ports.txt: device PORT specifications
	* support/scripts/inc2h.pl: fixed major .inc parsing bugs,
	  applied patch from Robert Tate (#1629249) to add PORTs and TRISs
	* device/lib/pic/libdev/pic*.c,
	* device/include/pic/pic*.h: regenerated with enhanced inc2h.pl
	* device/lib/pic/libdev/Makefile.in: show progress

2007-01-19 Bernhard Held <bernhard AT bernhardheld.de>

	* doc/sdccman.lyx: updated "configure options" for autoconf 2.6
	* support/scripts/sdcc_cygwin_mingw32,
	* support/scripts/sdcc_mingw32,
	* support/scripts/build.mak: replaced --datadir by --datarootdir for
	conformance with autoconf 2.6

2007-01-19 Raphael Neider <rneider AT web.de>

	* src/pic/device.c (register_map): fixed list construction
	* src/pic/gen.c (genDivOneByte,genModOneByte): accept result > 1 byte,
	  (genMod): removed case for genModbits,
	  (genModbits): removed as now unused/unimplemented
	* src/pic/glue.c (picglue): prevent name clash with sources 'init.c'

2007-01-18 Frieder Ferlemann <Frieder.Ferlemann AT web.de>

	* support/regression/tests/swap.c: added in response to #1638622
	* doc/sdccman.lyx: synced version, minor changes

2007-01-18 Borut Razem <borut.razem AT siol.net>

	* SDCClabel.c: fixed bug #1638651: wrong linenumber presented in warning,
	  thanks to Gunther Jehle
	* src/asm.c: don't die if the file drfined in #line couldn't be opened
	* src/SDCC.lex, src/SDCCglobal.h, src/SDCCicode.c, src/SDCCsymt.c,
	  src/SDCCval.c: removed redundant definitions of currFname and mylineno;
	  use filename in lineno instead.
	* SDCCast.c: removed MSVC warning C4018: '==' : signed/unsigned mismatch,
	  print the file name in ast_print()

2007-01-18 Borut Razem <borut.razem AT siol.net>

	* support/Util/dbuf_string.c: removed (PTR) cast since it is not
	  defined in MSVC